--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "functions": {
-    "api/*.php": {
+    "api/leaderboard.json": {
       "runtime": "vercel-php@0.6.0"
     }
+  }
+}
+
   }
 }
